Make player position bar stop at the end & fix tooltips! (#616)
* Make player postion bar stop at the end

* Tooltip now automattically avoids going off-screen.

--- a/src/Public/css/planner.css
+++ b/src/Public/css/planner.css
@@ -214,6 +214,7 @@ select {
   border-bottom: 12px solid rgba(66, 139, 202, 0.4);
   top: 0;
   height: 4px;
+  max-width: 100%;
 }
 
 .playout-slider .playout-slider-position .playout-slider-line {
